2001-09-04  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with automake 1.5.
	* stamp-h2.in: Ditto.

2001-09-04  Derek Price  <dprice@collab.net>

	* main.c (main): Fix empty CVSROOT message to specify `valid' instead
	of `legal'.

2001-09-04  Derek Price  <dprice@collab.net>

	* server.c (pserver_authenticate_connection): Back out changes from the
	30th and...
	* getline.c (getstr): init the buffer instead.

2001-08-31  Derek Price  <dprice@collab.net>

	* Makefile.in: Backed out accidental commit from yesterday.

2001-08-30  Derek Price  <dprice@collab.net>

	* server.c (pserver_authenticate_connection): Don't print from the
	NULL pointer in the error message string in the case where the client
	didn't send any data.
	* sanity.sh (pserver): Test for this case.
	(Report from Mark Welch <mark@collab.net>).

2001-08-24  Derek Price  <dprice@collab.net>

	* logmsg.c (do_editor): Add comment and assertion.
	* import.c (import): Don't call do_editor with a repository argument
	in client mode.
	(Report and original patch from darkness <darkness@invado.com>.)

2001-08-24  Larry Jones  <larry.jones@sdrc.com>

	* log.c (log_expand_revlist): Arrange for nil revision specs to
	select nothing instead of everything.
	* sanity.sh (log): New tests for above.

2001-08-24  Derek Price  <dprice@collab.net>

	* parseinfo.c (Parse_Info): Change the function name in the trace
	and add the client/server string.

2001-08-24  Derek Price  <dprice@collab.net>

	* Implement RereadLogAfterVerify CVSROOT/config option to control
	FreeBSD read-write of log messages in the verification script.
	* logmsg.c: RereadLogAfterVerify defaults to LOGMSG_REREAD_NEVER
	to preserve the status quo.
	* parseinfo.c (parse_config): Add parsing for RereadLogAfterVerify
	option. Possible values are: no | never | yes | always | stat
	* cvs.h: Add extern for RereadLogAfterVerify and new value macros
	LOGMSG_REREAD_NEVER, LOGMSG_REREAD_ALWAYS, LOGMSG_REREAD_STAT for
	its values.