@@ -1,3 +1,7 @@
+2001-09-06  Derek Price  <dprice@collab.net>
+
+	* login.c (login): Deal with NULL return value from getpass.
+
 2001-09-04  Derek Price  <dprice@collab.net>
 
 	* Makefile.in: Regenerated with automake 1.5.
